# p4benchmark

./: .gitignore  .gitmodules  MANIFEST.in  README.md  README.rst  commands.txt  controller.py  env.sh  experiment.py  generate-p4.py  generate_p4_program.py  index.html  install_bmv2.sh  packet_generator.sh  requirements.txt  reset_p4.py  setup.py  setup.sh
5_tuple_hash/: README.md  commands.txt  run_switch.sh  run_test.py  send_packet.py
Rscript/: extract_histogram.R  plot_from_histogram.R
action_complexity/: bm_mod_field.py  main.py
action_profile/: README.md  commands.txt  run_switch.sh  run_test.py
benchmark/: README.md  analyse.R  benchmark.py  gen_experiment.py  load_gen.py  parse_results.py  pen_memory.py  pen_packet_mod.py  pen_parser.py  pen_pipeline.py  plot.R  run_all.py  run_experiment.py  sdnet_benchmark.sh  switch.py
docs/: 5_tuples.rst  Makefile  action_profile.rst  code.rst  conf.py  flowlet_switching.rst  igmp.rst  index.rst  l2_forwarding.rst  ldp.rst  learning_switch.rst  make.bat  meter.rst  mpls.rst  nat.rst  registers.rst  router.rst  source_routing.rst  tcp_options.rst  udp_checksum.rst  vlan.rst  vxlan.rst
flowlet_switching/: commands.txt  run_test.py
l2forwarding/: run_switch.sh
ldp/: commands.txt  run_switch.sh
learning_switch/: README.md  commands.txt  controller.py  run_switch.sh
meter/: README.md  commands.txt  run_switch.sh  send_and_receive.py
mpls/: README.md  commands.txt  mpls_generator.py  run_switch.sh
n_tables/: README.md  send_packet.py
nat/: README.md  client_server.py  commands.txt  controller.py  generator.py  topo.py  (+1 more)
pktgen/: CMakeLists.txt  main.c  packet_parser.c  pcap_timestamp.lua  sniffex.c  timestamp.lua  timestamp.pcap
pktgen/include/: capture.h  packet_parser.h  parser.h
pktgen/lua_config/: hardware-timestamping.lua  p4benchmark.lua  pcap_timestamp.lua  pcap_ts_timer.lua  timestamp.lua
pktgen/src/: capture.c  close_loop.c  main.c  parser.c
(+182 files in other folders)
